# Design_Patterns_examples

./: .gitignore  README.md  blslsek.uxf  oop_concepts.md  template.md  thisuml.puml
.github/workflows/: design_patterns_examples.yaml
SOLID/: README.md
behavioral/chain_of_responsability/cpp/: generic_example.cpp
behavioral/chain_of_responsibility/: README.md
behavioral/chain_of_responsibility/cpp/: generic_example.cpp
behavioral/state/: README.md
behavioral/state/cpp/: generic_example.cpp
behavioral/strategy/: README.md
behavioral/strategy/cpp/: generic_example.cpp
creational/abstract_factory/: README.md
creational/abstract_factory/cpp/: generic_example.cpp
creational/abstract_factory/python/: __main__.py
creational/abstract_factory/python/autos/: __init__.py  abs_auto.py
creational/abstract_factory/python/factories/: __init__.py  abs_factories.py  ford_factory.py  mercedes_factory.py  toyota_factory.py
creational/builder/cpp/: generic_example.cpp  pizza_example.cpp
creational/factory/: README.md
creational/factory/python/: car.py  fiat.py  jeep.py  mercedes.py  nullcar.py
creational/factory/python/cars/: abs_car.py  fiat.py  null_car.py
creational/prototype/cpp/: animal_example.cpp
creational/singleton/cpp/: CMakeLists.txt  Singleton.cpp  Singleton.h  generic_example.cpp  singleton.cpp
structural/adapter/: README.md
structural/adapter/cpp/: class_adapter.cpp  object_adapter.cpp  object_adapter_concrete_class.cpp  object_adapter_interface.cpp  player_example.cpp
structural/bridge/: README.md  bridge.cpp
(+24 files in other folders)
